--- a/medsales/pom.xml
+++ b/medsales/pom.xml
@@ -157,6 +157,11 @@
 				<artifactId>commons-logging-api</artifactId>
 				<version>1.1</version>
 			</dependency>
+			<dependency>
+				<groupId>org.sales</groupId>
+				<artifactId>medsales-api</artifactId>
+				<version>1.0-SNAPSHOT</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
