--- a/medsales/medsales-app/pom.xml
+++ b/medsales/medsales-app/pom.xml
@@ -132,6 +132,7 @@
 		<dependency>
 			<groupId>org.easy</groupId>
 			<artifactId>testeasy</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-beanutils</groupId>
@@ -145,6 +146,15 @@
 			<groupId>org.sales</groupId>
 			<artifactId>medsales-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>all-themes</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -152,7 +162,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.3</version>
+				<version>2.4</version>
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
