--- a/medsales/pom.xml
+++ b/medsales/pom.xml
@@ -162,6 +162,18 @@
 				<artifactId>medsales-api</artifactId>
 				<version>1.0-SNAPSHOT</version>
 			</dependency>
+
+			<dependency>
+				<groupId>org.primefaces</groupId>
+				<artifactId>primefaces</artifactId>
+				<version>5.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.primefaces.themes</groupId>
+				<artifactId>all-themes</artifactId>
+				<version>1.0.10</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
@@ -170,7 +182,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
+				<version>3.1</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
@@ -178,6 +190,19 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>central</id>
+			<name>Central</name>
+			<url>http://mvnrepository.com/</url>
+		</repository>
+		<repository>
+			<id>Primefaces</id>
+			<name>Primefaces</name>
+			<url>http://repository.primefaces.org/</url>
+		</repository>
+	</repositories>
 
 	<modules>
 		<module>medsales-api</module>
