--- a/medsales/pom.xml
+++ b/medsales/pom.xml
@@ -173,6 +173,21 @@
 				<artifactId>all-themes</artifactId>
 				<version>1.0.10</version>
 			</dependency>
+			<dependency>
+				<groupId>org.primefaces.extensions</groupId>
+				<artifactId>primefaces-extensions</artifactId>
+				<version>2.1.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.3.2</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.code.gson</groupId>
+				<artifactId>gson</artifactId>
+				<version>2.3.1</version>
+			</dependency>
 
 		</dependencies>
 	</dependencyManagement>
@@ -192,16 +207,9 @@
 	</build>
 
 	<repositories>
-		<repository>
-			<id>central</id>
-			<name>Central</name>
-			<url>http://mvnrepository.com/</url>
-		</repository>
-		<repository>
-			<id>Primefaces</id>
-			<name>Primefaces</name>
-			<url>http://repository.primefaces.org/</url>
-		</repository>
+		<!-- <repository> <id>central</id> <name>Central</name> <url>http://mvnrepository.com/</url> 
+			</repository> <repository> <id>Primefaces</id> <name>Primefaces</name> <url>http://repository.primefaces.org/</url> 
+			</repository> -->
 	</repositories>
 
 	<modules>
