--- a/medsales/pom.xml
+++ b/medsales/pom.xml
@@ -84,12 +84,6 @@
 				<version>2.2.6</version>
 			</dependency>
 
-			<dependency>
-				<groupId>org.primefaces</groupId>
-				<artifactId>primefaces</artifactId>
-				<version>5.1</version>
-			</dependency>
-
 			<!-- Test dependencies -->
 			<dependency>
 				<groupId>junit</groupId>
@@ -167,6 +161,11 @@
 				<groupId>org.primefaces</groupId>
 				<artifactId>primefaces</artifactId>
 				<version>5.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.poi</groupId>
+				<artifactId>poi</artifactId>
+				<version>3.7</version>
 			</dependency>
 			<dependency>
 				<groupId>org.primefaces.themes</groupId>
