--- a/medsales/pom.xml
+++ b/medsales/pom.xml
@@ -205,7 +205,7 @@
 		</plugins>
 	</build>
 
-	<repositories>
+<!-- 	<repositories>
 		<repository>
 			<id>central</id>
 			<name>Central</name>
@@ -218,7 +218,7 @@
 		</repository>
 	</repositories>
 
-	<modules>
+ -->	<modules>
 		<module>medsales-api</module>
 		<module>medsales-app</module>
 	</modules>
